<resources>
    <string name="app_name">Android Extensions</string>
    <string name="empty_string" />
    <string name="unknown_device">Unknown device</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="ble_no_permission">No BLE Permission</string>

    <!-- Navigation tabs -->
    <string name="navigation">Nav</string>
    <string name="recycler_view">Lists</string>
    <string name="communications">Comms</string>
    <string name="misc">Misc</string>

    <!-- Route Descriptions -->
    <string name="route_feeling_lucky">I\'m feeling lucky</string>
    <string name="route_doggo_list">A list of hints demonstrating delegation of shared element transitions to the calling fragment.</string>
    <string name="route_doggo_rank">A list of good boyes showing drag and drop functionality.</string>
    <string name="route_ui_state">A demo of global ui state manager for persistent ui.</string>
    <string name="route_independent_stack">A demo of the StackNavigator using independent stacks* within the same FragmentManager.</string>
    <string name="route_multiple_inner_stack">A demo of the MultiStackNavigator, while being a child of a MultiStackNavigator; Stack-ception.</string>
    <string name="route_shifting_tile">A grid of shifting colorful tiles demonstrating the Diffable interface.</string>
    <string name="route_endless_tile">A grid of colorful tiles demonstrating endless scrolling with the Diffable interface.</string>
    <string name="route_spreadsheet">A spreadsheet type view demonstrating the RecyclerViewMultiScroller</string>
    <string name="route_standings">A sports standings type view demonstrating the RecyclerViewMultiScroller</string>
    <string name="route_ble_scan">A fragment demonstrating the use of the BLEScanner from the Communications module.</string>
    <string name="route_nsd_scan">A fragment demonstrating the use of the NsdHelper from the Communications module.</string>
    <string name="route_spring_animation">A fragment demonstrating spring animations, and how to use them for the "quick return" pattern</string>
    <string name="route_span_builder">A fragment demonstrating the charSequence extensions for building spans</string>
    <string name="route_fab_transformations">A fragment showing material transformations on a FloatingActionButton</string>
    <string name="route_hard_service_connection">A fragment demonstrating the HardServiceConnection</string>
    <string name="route_viewpager">A fragment demonstrating the FragmentListAdapter</string>

    <string name="stress_test_prompt" >Stress test navigation?</string>
    <string name="yes" >Yes</string>
    <string name="no" >No</string>

    <!-- Menu items -->
    <string name="menu_reset_navigation">Reset Navigation</string>
    <string name="menu_theme">Toggle theme</string>
    <string name="menu_stress_test">Stress Test</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_refresh">Refresh</string>

    <!-- Doggo -->
    <string name="collapse_prompt">Tap to collapse</string>
    <string name="adopt">Adopt</string>
    <string name="adopt_doggo">Adopt  %1$s</string>
    <string name="adopted_doggo">%1$s  ❤️s  Y O U!</string>

    <!-- Directions -->
    <string name="reset">reset</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>

    <!-- BLE -->
    <string name="no_ble">BLE is not supported</string>
    <string name="no_ble_devices">No BLE devices found</string>

    <!-- NSD -->
    <string name="no_nsd_devices">No NSD devices found</string>

    <!-- Doggo Rank -->
    <string name="reset_doggos">Reset Doggos</string>
    <string name="browse_doggos">Browse Doggos</string>
    <string name="rank_doggos">Rank Doggos</string>
    <string name="doggo_moved">%1$s is now #%2$d!</string>
    <string name="doggo_removed">%1$s has been adopted!</string>

    <!-- Tiles -->
    <string name="static_tiles">Constant tile count</string>
    <string name="dynamic_tiles">Dynamic tile count</string>
    <string name="tile_info">Tile Info</string>

    <!-- IndependentStack -->
    <string name="double_line_format">%1$s\n%2$s</string>

    <!-- MultipleStack -->
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="go_deeper">Go Deeper</string>
    <string name="clear">CLEAR</string>
    <string name="triple_line_format">%1$s\n%2$s\n%3$s</string>
    <plurals name="stack_depth">
        <item quantity="one">%1$d fragment deep</item>
        <item quantity="other">%1$d fragments deep</item>
    </plurals>
    <string name="slide">Slide in/out</string>
    <string name="cross_fade">Cross Fade</string>

    <!-- Standings -->
    <string name="all">All</string>
    <string name="home">Home</string>
    <string name="away">Away</string>

    <!-- Spreadsheet -->
    <string name="static_cells">Static</string>
    <string name="dynamic_cells">Dynamic</string>
    <string name="cell_formatter">%1$s%2$s</string>

    <!-- HardServiceConnection -->
    <string name="bind_service">Bind Service</string>
    <string name="unbind_service">Unbind Service</string>
    <plurals name="bind_duration">
        <item quantity="one">Bound for %1$d second</item>
        <item quantity="other">Bound for %1$d seconds</item>
    </plurals>
    <string name="service_disconnected">Service disconnected</string>

    <!-- SpeedDial -->
    <string name="speed_dial">Speed Dial</string>
    <string name="expand_fab">Expand FAB</string>
    <string name="option_1">First Option</string>
    <string name="option_2">Second Option</string>
    <string name="option_3">Third Option</string>
    <string name="option_4">Fourth Option</string>
    <string name="option_5">Fifth Option</string>
    <string name="stiffness">Stiffness</string>
    <string name="bounciness">Bounciness</string>
    <string name="none">None</string>
    <string name="bruh">Bruh</string>
    <string name="very_low">Very Low</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>

    <!-- Hiding Views -->
    <string name="spring_options">Spring options</string>
    <string name="shrink_margins">Shrink margins</string>
    <string name="shrink_padding">Shrink padding</string>
    <string name="party_hard">Party Hard</string>

    <!-- Fragment List Adapter -->
    <string name="edit_tabs">Edit Tabs</string>
    <string name="shuffle_tabs">Shuffle Tabs</string>

    <!-- UiState -->
    <string name="ui_state_playground">UI State Playground</string>
    <string name="show_keyboard">Show keyboard</string>
    <string name="choose_an_option">Choose an Option</string>
    <string name="hi">Hi</string>
    <string name="hello">Hello</string>
    <string name="how_are_you_doing">How are you doing</string>
    <string name="reality_can_be">Reality can be whatever I want</string>
    <string name="inevitable">I am inevitable</string>
    <string name="survivor">I a survivor</string>

</resources>
