<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent=".8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".8"
        app:strokeColor="@color/white"
        app:strokeWidth="@dimen/eigth_margin">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bullseye_24dp"
            android:text="@string/reset"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorSurface" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/left_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_left_black_24dp"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias=".2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/reset"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorSurface" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right_black_24dp"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias=".8"
            app:layout_constraintLeft_toRightOf="@+id/reset"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorSurface" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/top_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_up_black_24dp"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="mini"
            app:layout_constraintBottom_toTopOf="@+id/reset"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".2"
            app:tint="@color/colorSurface" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bottom_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_down_black_24dp"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reset"
            app:layout_constraintVertical_bias=".8"
            app:tint="@color/colorSurface" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <CheckBox
        android:id="@+id/shrink_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/single_margin"
        android:layout_marginRight="@dimen/single_margin"
        android:text="@string/shrink_margins"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/shrink_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/single_margin"
        android:layout_marginRight="@dimen/single_margin"
        android:text="@string/shrink_padding"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
